refactor: se adapto el codigo a los cambios
Signed-off-by: Santiago Zapata Barahona <santiago.zapatab@udea.edu.co>