@@ -5,6 +5,7 @@ import com.vegas.sistema_gestion_operativa.users.domain.User;
 import com.vegas.sistema_gestion_operativa.users.dto.CreateUserDto;
 import com.vegas.sistema_gestion_operativa.unit.users.factory.FakeUserFactory;
 import com.vegas.sistema_gestion_operativa.users.exceptions.UserAlreadyExistsException;
+import com.vegas.sistema_gestion_operativa.users.factory.UserFactory;
 import com.vegas.sistema_gestion_operativa.users.repository.IUserRepository;
 import com.vegas.sistema_gestion_operativa.users.service.UserService;
 import org.junit.jupiter.api.Test;
@@ -12,7 +13,6 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import software.amazon.awssdk.services.cognitoidentityprovider.model.AdminCreateUserResponse;
 
 import java.util.List;
 
@@ -28,6 +28,9 @@ class UserServiceTest {
     @Mock
     private CognitoIdentityService cognitoIdentityService;
 
+    @Mock
+    private UserFactory userFactory;
+
     @InjectMocks
     private UserService userService;
 
@@ -41,18 +44,35 @@ class UserServiceTest {
 
         assertNotNull(result);
         assertEquals(2, result.size());
-        assertEquals("a@example.com", result.getFirst().getEmail());
+        assertEquals("a@example.com", result.get(0).getEmail());
         verify(userRepository, times(1)).findAll();
     }
 
     @Test
     void create_shouldBuildUserFromDtoAndSave() throws UserAlreadyExistsException {
         CreateUserDto dto = FakeUserFactory.createFakeCreateUserDto();
+        String fakeUserId = "fake-cognito-user-id-123";
 
-        // Simular que el repositorio devuelve exactamente el objeto que se le pasa
-        when(userRepository.save(any(User.class))).thenAnswer(invocation -> invocation.getArgument(0));
-        AdminCreateUserResponse fakeResponse = AdminCreateUserResponse.builder().build();
-        when(cognitoIdentityService.createUser(anyString(), anyString(), anyString(), anyString())).thenReturn(fakeResponse);
+        // Mock de Cognito para devolver un ID de usuario
+        when(cognitoIdentityService.createUser(anyString(), anyString(), anyString(), anyString()))
+                .thenReturn(fakeUserId);
+
+        // Mock del UserFactory para crear el usuario con el ID de Cognito
+        User expectedUser = User.builder()
+                .id(fakeUserId)
+                .email(dto.email())
+                .givenName(dto.givenName())
+                .familyName(dto.familyName())
+                .idType(dto.idType())
+                .phoneNumber(dto.phoneNumber())
+                .role(com.vegas.sistema_gestion_operativa.roles.domain.Role.CASHIER)
+                .build();
+
+        when(userFactory.createFromDto(eq(dto), eq(fakeUserId))).thenReturn(expectedUser);
+
+        // Mock del repositorio para devolver el usuario guardado
+        when(userRepository.save(any(User.class))).thenReturn(expectedUser);
+        when(userRepository.findByEmail(dto.email())).thenReturn(java.util.Optional.empty());
 
         User result = userService.create(dto);
 
@@ -62,14 +82,39 @@ class UserServiceTest {
         assertEquals(dto.familyName(), result.getFamilyName());
         assertEquals(dto.idType(), result.getIdType());
         assertEquals(dto.phoneNumber(), result.getPhoneNumber());
+        assertEquals(fakeUserId, result.getId());
+
+        verify(cognitoIdentityService, times(1)).createUser(
+                eq(dto.email()),
+                eq(dto.givenName()),
+                eq(dto.familyName()),
+                eq(dto.roleName())
+        );
+        verify(userFactory, times(1)).createFromDto(eq(dto), eq(fakeUserId));
         verify(userRepository, times(1)).save(any(User.class));
-        verify(cognitoIdentityService, times(1)).createUser(anyString(), anyString(), anyString(), anyString());
     }
 
     @Test
     void create_whenRepositoryThrows_shouldPropagateException() {
         CreateUserDto dto = FakeUserFactory.createFakeCreateUserDto();
+        String fakeUserId = "fake-cognito-user-id-123";
+
+        // Mock de Cognito para devolver un ID de usuario
+        when(cognitoIdentityService.createUser(anyString(), anyString(), anyString(), anyString()))
+                .thenReturn(fakeUserId);
+
+        // Mock del UserFactory para crear el usuario
+        User expectedUser = User.builder()
+                .id(fakeUserId)
+                .email(dto.email())
+                .givenName(dto.givenName())
+                .familyName(dto.familyName())
+                .build();
+
+        when(userFactory.createFromDto(eq(dto), eq(fakeUserId))).thenReturn(expectedUser);
+        when(userRepository.findByEmail(dto.email())).thenReturn(java.util.Optional.empty());
         when(userRepository.save(any(User.class))).thenThrow(new RuntimeException("DB failure"));
+
         RuntimeException ex = assertThrows(RuntimeException.class, () -> userService.create(dto));
         assertEquals("DB failure", ex.getMessage());
         verify(userRepository, times(1)).save(any(User.class));
